--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,77 @@
+# SPDX-FileCopyrightText: Copyright 2020-2023, Contributors to CICD
+# SPDX-PackageHomePage: https://github.com/dmyersturnbull/cicd
+# SPDX-License-Identifier: Apache-2.0
+
 # Check out https://pre-commit.com/ for documentation
-# and https://pre-commit.com/hooks.html for more hooks
-minimum_pre_commit_version: 2.10.0
-# Don't set language_version -- it's only useful if we have multiple
-# python versions or our build uses a different env than runtime
+minimum_pre_commit_version: 3.3.3
 repos:
-  # --- Built-in hooks --
-  - hooks:
-      - id: check-symlinks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
       - id: check-case-conflict
-      - id: fix-byte-order-marker
-      - id: end-of-file-fixer
       - id: check-merge-conflict
       - id: check-toml
       - id: check-json
+      - id: check-shebang-scripts-are-executable
+      - id: check-symlinks
       - id: check-yaml
-    repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+        exclude: ^recipes/.*
+        args: [--unsafe]
+      - id: end-of-file-fixer
+      - id: fix-byte-order-marker
+        exclude: "^tests/(?:resources|data)/"
+      - id: fix-encoding-pragma
+        args: [--remove]
+      - id: trailing-whitespace
+
+  # --- Commit msg checks ---
+  - hooks:
+      - id: commitizen
+        stages: ["commit-msg"]
+    repo: https://github.com/commitizen-tools/commitizen
+    rev: v3.6.0
+
+  # --- Linters ---
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.0.280
+    hooks:
+      - id: ruff
+        args: [--fix-only]
+        types_or: [python, pyi, jupyter]
+
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
+    hooks:
+      - id: black
+
+  - repo: https://github.com/asottile/blacken-docs
+    rev: 1.14.0
+    hooks:
+      - id: blacken-docs
+
+  # --- Strip output from .ipynb files ---
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.6.1
+    hooks:
+      - id: nbstripout
+
+  # run black on Jupyter notebooks
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.7.0
+    hooks:
+      - id: nbqa-ruff
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
+    hooks:
+      - id: prettier
+        stages: [commit]
+        # :tyranno: [--print-width, "${tool.ruff.line-length}"]
+        args: [--print-width, "120"]
+        exclude: ^recipes/.*
+
+  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.9.0
+    hooks:
+      - id: pretty-format-ini
+        args: [--autofix]
