--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -20,6 +20,7 @@ nav:
       - Research projects: guide/research-projects.md
       - MariaDB best practices: guide/mariadb-best-practices.md
   - Posts & tutorials:
+      - Duck typing is quackery: post/duck-typing-is-quackery.md
       - Software testing: post/software-testing.md
       - Scientific software testing: post/scientific-software-testing.md
       - Python infrastructure: post/python-infrastructure.md
@@ -138,6 +139,9 @@ markdown_extensions:
   - tables
   - toc:
       permalink: true
+
+extra_css:
+  - stylesheets/extra.css
 
 extra_javascript:
   - javascripts/mathjax.js
