--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,23 +12,25 @@ nav:
       - Contributor guide: ref/contributor-guide.md
       - Maintainer guide: ref/maintainer-guide.md
       - Coding conventions: ref/coding-conventions.md
-  - Setup & best-practices guides:
+      - GitHub labels: ref/github-labels.md
+  - Setup guides:
       - Linux setup: guide/linux-setup.md
       - macOS setup: guide/macos-setup.md
       - Windows setup: guide/windows-setup.md
-      - Git and SSH config: guide/git-and-ssh.md
+      - Git+SSH+GPG config: guide/git-ssh-gpg.md
       - Research projects: guide/research-projects.md
-      - MariaDB best practices: guide/mariadb-best-practices.md
+      - MariaDB best practices: guide/mariadb-setup.md
+      - Mamba (Conda) setup: guide/mamba-setup.md
+      - FFmpeg setup: guide/ffmpeg-setup.md
+      - Arduino setup: guide/arduino-setup.md
   - Posts & tutorials:
       - Duck typing is quackery: post/duck-typing-is-quackery.md
       - Software testing: post/software-testing.md
-      - Scientific software testing: post/scientific-software-testing.md
+      - Scientific software tests: post/scientific-software-tests.md
       - Python infrastructure: post/python-infrastructure.md
       - Web stuff: post/web-stuff.md
-  - Mini guides:
-      - MariaDB local install: misc/mariadb-local-install.md
-      - Compiling ffmpeg: misc/ffmpeg-compile.md
-      - Micromamba setup: misc/micromamba-setup.md
+      - GET query DSL: post/query-dsl.md
+      - Design pattern zoo: post/design-pattern-zoo.md
 
 # Theme
 theme:
