--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Check out https://pre-commit.com/ for documentation
-minimum_pre_commit_version: 3.6.0
+minimum_pre_commit_version: 3.7.0
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-case-conflict
       - id: check-merge-conflict
@@ -16,12 +16,14 @@ repos:
       - id: check-symlinks
       - id: check-yaml
         exclude: ^recipes/.*
-        args: [--unsafe]
+        args:
+          - --unsafe
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
-        exclude: "^tests/(?:resources|data)/"
       - id: fix-encoding-pragma
         args: [--remove]
+      - id: check-illegal-windows-names
+      - id: forbid-submodules
       - id: trailing-whitespace
 
   # --- Commit msg checks ---
@@ -29,33 +31,12 @@ repos:
       - id: commitizen
         stages: ["commit-msg"]
     repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.6.0
+    rev: v3.27.0
 
   # --- Linters ---
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.2.2
+    rev: v0.4.8
     hooks:
       - id: ruff
         args: [--fix-only]
         types_or: [python, pyi, jupyter]
-
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
-    hooks:
-      - id: blacken-docs
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
-    hooks:
-      - id: prettier
-        stages: [commit]
-        # :tyranno: [--print-width, "${tool.ruff.line-length}"]
-        args: [--print-width, "120"]
-        types_or: [json, yaml, toml, less, css, javascript, html]
-        exclude: ^recipes/.*
-
-  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.12.0
-    hooks:
-      - id: pretty-format-ini
-        args: [--autofix]
