feat: add unicode symbol tool

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -47,6 +47,7 @@ nav:
       - Frontends for time-travelers: post/frontends-for-time-travelers.md
       - Git tips and microscripts: post/git-tips-and-microscripts.md
       - Wonders of ChatGPT: post/wonders-of-chatgpt.md
+      - Unicode symbol snatcher: post/unicode-symbol-snatcher.md
 
 # Theme
 theme:
