--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 # SPDX-FileCopyrightText: Copyright 2024, Contributors to dmyersturnbull.github.io
-# SPDX-PackageHomePage: https://github.com/dmyersturnbull.github.io
+# SPDX-PackageHomePage: https://github.com/dmyersturnbull/dmyersturnbull.github.io
 # SPDX-License-Identifier: Apache-2.0
 #
 # Adapted from Tyrannosaurus <https://github.com/dmyersturnbull/tyrannosaurus>
@@ -19,37 +19,46 @@ repos:
       - id: check-case-conflict # ban ABC and abc both existing
       - id: check-illegal-windows-names # ban filenames that are illegal on Windows
       - id: check-merge-conflict # ban merge conflict markers
-      - id: check-shebang-scripts-are-executable
-      - id: check-executables-have-shebangs
+        args:
+          - --assume-in-merge # otherwise skipped in rebase
       - id: check-symlinks # ban *broken* symlinks
       - id: end-of-file-fixer # auto-add final \n
       - id: fix-byte-order-marker # auto-remove BOMs
       - id: trailing-whitespace # auto-remove end-of-line whitespace
 
+  # UV lock
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.5.18
+    hooks:
+      - id: uv-lock
+
   # Format and lint Python with Ruff
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.4
+    rev: v0.9.1
     hooks:
       - id: ruff
         args:
-          - "--fix-only"
+          - --fix-only
       - id: ruff-format
 
-  # Format various languages with Prettier
-  - repo: local
+  # Format various formats with Prettier
+  - repo: https://github.com/JoC0de/pre-commit-prettier
+    rev: v3.4.2
     hooks:
       - id: prettier
-        name: prettier
-        description: "Auto-format using Prettier"
-        language: node
-        entry: prettier
-        args:
-          - --write
-          - --experimental-ternaries # will be the default soon
-        types:
-          - text
-        # IMPORTANT: Add to this list as needed.
-        files: '\.(md|json|yaml|ts|js|css)$'
-        require_serial: false
         additional_dependencies:
-          - prettier
+          - prettier@3.4.2
+          - prettier-plugin-ini@1.3.0
+          - prettier-plugin-properties@0.3.0
+          - prettier-plugin-toml@2.0.1
+          - prettier-plugin-sh@0.14.0
+        args:
+          - --experimental-ternaries # will be the default soon
+          - --plugin=prettier-plugin-ini
+          - --plugin=prettier-plugin-properties
+          - --plugin=prettier-plugin-toml
+          - --plugin=prettier-plugin-sh
+        # IMPORTANT: Sync this list with file types in this repo.
+        # It's ok to list unused suffixes, but Prettier or a plugin must understand them.
+        # See: https://prettier.io/docs/en/plugins.html
+        files: \.(md|mdx|json|yaml|yml|toml|ini|cfg|properties|sh|ts|js|html|less|css)$
