--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright 2017-2024, Douglas Myers-Turnbull
+# SPDX-FileCopyrightText: Copyright 2017-2025, Douglas Myers-Turnbull
 # SPDX-PackageHomePage: https://dmyersturnbull.github.io
 # SPDX-License-Identifier: CC-BY-SA-4.0
 
@@ -32,7 +32,7 @@ jobs:
           python-version: "3.13"
       - name: Install dependencies
         run: |
-          uv sync --no-install-project
+          uv sync --frozen
       - name: Build docs
         run: |
           uv run mkdocs build
