--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright 2017-2024, Douglas Myers-Turnbull
+# SPDX-FileCopyrightText: Copyright 2017-2025, Douglas Myers-Turnbull
 # SPDX-PackageHomePage: https://dmyersturnbull.github.io
 # SPDX-License-Identifier: CC-BY-SA-4.0
 
@@ -9,7 +9,10 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-      - id: forbid-submodules # ban Git submodules
+      - id: check-added-large-files
+        args:
+          - --maxkb=256
+      - id: forbid-new-submodules # ban Git submodules
       - id: check-case-conflict # ban ABC and abc both existing
       - id: check-illegal-windows-names # ban filenames that are illegal on Windows
       - id: check-merge-conflict # ban merge conflict markers
@@ -22,13 +25,13 @@ repos:
 
   # UV lock
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.5.18
+    rev: 0.6.14
     hooks:
-      - id: uv-lock
+      - id: uv-sync
 
   # Format and lint Python with Ruff
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.1
+    rev: v0.11.5
     hooks:
       - id: ruff
         args:
@@ -37,22 +40,21 @@ repos:
 
   # Format various formats with Prettier
   - repo: https://github.com/JoC0de/pre-commit-prettier
-    rev: v3.4.2
+    rev: v3.5.3
     hooks:
       - id: prettier
         additional_dependencies:
-          - prettier@3.4.2
+          - prettier@3.5.3
           - prettier-plugin-ini@1.3.0
-          - prettier-plugin-properties@0.3.0
           - prettier-plugin-toml@2.0.1
           - prettier-plugin-sh@0.14.0
         args:
           - --experimental-ternaries # will be the default soon
+          - --experimental-operator-position=start # won't be the default but should be
           - --plugin=prettier-plugin-ini
-          - --plugin=prettier-plugin-properties
           - --plugin=prettier-plugin-toml
-          - --plugin=prettier-plugin-sh
+          - --plugin=prettier-plugin-sh # also covers .properties and Dockerfile
         # IMPORTANT: Sync this list with file types in this repo.
         # It's ok to list unused suffixes, but Prettier or a plugin must understand them.
         # See: https://prettier.io/docs/en/plugins.html
-        files: \.(md|mdx|json|yaml|yml|toml|ini|cfg|properties|sh|ts|js|html|less|css)$
+        files: \.(md|mdx|json|yaml|yml|toml|ini|cfg|properties|sh|ts|js|html|less|css)$|^Dockerfile$|^\..+ignore$
