--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,31 @@
+# SPDX-FileCopyrightText: Copyright 2020-2025, Contributors to Tyrannosaurus
+# SPDX-PackageHomePage: https://github.com/dmyersturnbull/tyrannosaurus
+# SPDX-License-Identifier: Apache-2.0
+
 # .gitignore for Python, Java/Scala/Kotlin, C/C++, JavaScript/TypeScript, and Julia.
 # It also covers some common tools and IDEs, but it isn't meant to be comprehensive.
 # Note that it doesn't cover obsolete Python files like Eggs (`*.egg`).
 #
 # The approach is to blacklist `.*` and similar patterns, then to whitelist specific files.
-# This approach maeks the file much simpler and easier to understand.
+# This approach makes the file much simpler and easier to understand.
 # Some of the rules are derived from <https://github.com/github/gitignore/>.
 #
 # Notes:
 #   - `x` is equivalent to `**/x`, in contrast to `.dockerignore` and `.prettierignore`.
 #   - Always mark directories with a `/` suffix.
-#   - Per section, place directories above files; then sort lexigraphically.
+#   - Per section, place directories above files; then sort lexicographically.
 #     (Order (using regex): `/` ≺ `*` ≺ `[^A-Za-z0-9]` ≺ `[0-9]` ≺ `[A-Za-z]`.)
 
-# Dotted files
+# Note: Patterns are relative, unlike `.dockerignore` and `.prettierignore`.
+
+# Dotted files and directories
 .*
 
-# General hidden or unwanted
+# Paths starting or ending in `~`, `$`, or `#` (normally temp files; e.g. `~$doc.docx`, `.profile#`, etc.)
 *[~#$]
 [~#$]*
+
+# Temp and misc. unwanted files
 *[.~]bak
 *[.~]out
 *[.~]swp
@@ -26,6 +34,10 @@
 *.log
 *.pid
 Thumbs.db
+
+# Databases
+*.sqlite3
+*.sqlite3-journal
 
 # Archives
 *.7z
@@ -40,7 +52,7 @@ Thumbs.db
 *.war
 *.xz
 *.zip
-*.zstd
+*.zst
 
 # Executables and libraries
 *.dll
@@ -52,9 +64,7 @@ Thumbs.db
 
 # IDEs
 *.iml
-*.pch
-*.profdata
-misc.xml
+pch.h
 
 # Python
 /build/
@@ -69,12 +79,10 @@ cython_debug/
 /target/
 /pom.xml.*
 *.class
-hs_err_pid*
-local.properties
-replay_pid*
 
 # C and C++
 *.a
+*.pch
 *.gch
 *.ko
 *.lib
@@ -82,17 +90,15 @@ replay_pid*
 *.o
 
 # Make, CMake, automake, autoconf, pkg-config, etc.
-_deps/
-/_deps
+_deps
 *.la
 *.pc
-cmake_install.cmake
-compile_commands.json
-install_manifest.txt
+/cmake_install.cmake
+/compile_commands.json
+/install_manifest.txt
 
 # JavaScript and TypeScript
 node_modules/
-# TypeScript cache
 tsconfig.tsbuildinfo
 
 # Julia
@@ -105,19 +111,17 @@ deps/deps.jl
 /docs/html/
 /docs/_build/
 /docs/autoapi/
-/htmlcov/
-/site/
 
 # Coverage
 /coverage.*
+/coverage/
+/htmlcov/
 
 # IPython
 profile_default/
 ipython_config.py
 
 # Django
-/db.sqlite3
-/db.sqlite3-journal
 /local_settings.py
 
 # Celery
@@ -126,6 +130,8 @@ celerybeat-schedule
 # Terraform
 override.tf
 override.tf.json
+*_override.tf
+*_override.tf.json
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 #                             whitelist                             #
@@ -134,9 +140,13 @@ override.tf.json
 # Git
 !/.git-blame-ignore-revs
 !/.gitattributes
+!/.gitmodules
+
+# Template files
+/.env.template
 
 # `.ignore` files (e.g. `.dockerignore`, `.npmignore`)
-!.*ignore
+!/.*ignore
 
 # GitHub
 !/.github/
@@ -148,6 +158,9 @@ override.tf.json
 
 # External service config
 !/.*.yaml
+!/.*.yml
 !/.*.toml
-!/.*/[A-Za-z0-9_-]*.yaml
-!/.*/[A-Za-z0-9_-]*.toml
+!/.*/[a-z0-9_-]*.yaml
+!/.*/[a-z0-9_-]*.yml
+!/.*/[a-z0-9_-]*.toml
+!/.circleci/
