--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,16 @@
 
 # Note: Patterns are relative, unlike `.dockerignore` and `.prettierignore`.
 
-# Dotted files and directories
+### Temporary paths ###
+
+# Dotted paths (many whitelisted later)
 .*
 
-# Paths starting or ending in `~`, `$`, or `#` (normally temp files; e.g. `~$doc.docx`, `.profile#`, etc.)
+# Paths starting or ending in `~`, `$`, or `#`; or starting in `.~`.
+# These are normally temp files like `~$doc.docx` or `.profile#`.
 *[~#$]
 [~#$]*
+.~*
 
 # Temp and misc. unwanted files
 *[.~]bak
@@ -34,6 +38,8 @@
 *.log
 *.pid
 Thumbs.db
+
+### Large binary files ###
 
 # Databases
 *.sqlite3
@@ -62,21 +68,40 @@ Thumbs.db
 *.pkg
 *.so
 
-# IDEs
-*.iml
-pch.h
+### Cross-language directories ###
 
-# Python
+# Build directories
+/bin/
 /build/
 /dist/
+/obj/
+/out/
 /sdist/
+/target/
+
+# Prebuilt libraries
+/lib/
+/vendor/
+
+# Auto-generated docs
+/docs/html/
+/docs/_build/
+/docs/autoapi/
+/site/
+
+### Language-specific paths ###
+
+# Coverage
+/coverage/
+/htmlcov/
+
+# Python
 __pycache__/
 __pypackages__/
 cython_debug/
 *.py[cod]
 
 # Java
-/target/
 /pom.xml.*
 *.class
 
@@ -88,6 +113,8 @@ cython_debug/
 *.lib
 *.lo
 *.o
+
+### Temporary files for tools ###
 
 # Make, CMake, automake, autoconf, pkg-config, etc.
 _deps
@@ -107,15 +134,9 @@ tsconfig.tsbuildinfo
 *.jl.mem
 deps/deps.jl
 
-# Documentation
-/docs/html/
-/docs/_build/
-/docs/autoapi/
-
-# Coverage
-/coverage.*
-/coverage/
-/htmlcov/
+# IDEs
+*.iml
+pch.h
 
 # IPython
 profile_default/
@@ -133,9 +154,7 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-#                             whitelist                             #
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+### Whitelist dotted files ###
 
 # Git
 !/.git-blame-ignore-revs
@@ -149,6 +168,7 @@ override.tf.json
 !/.*ignore
 
 # GitHub
+!/.devcontainer
 !/.github/
 !/.nojekyll
 
@@ -156,11 +176,15 @@ override.tf.json
 !/.editorconfig
 !/.prettierrc*
 
+# mkdocs
+!.meta.yaml
+!.meta.yml
+
 # External service config
+!/.*.toml
 !/.*.yaml
 !/.*.yml
-!/.*.toml
+!/.*/[a-z0-9_-]*.toml
 !/.*/[a-z0-9_-]*.yaml
 !/.*/[a-z0-9_-]*.yml
-!/.*/[a-z0-9_-]*.toml
 !/.circleci/
