--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Check out https://pre-commit.com/ for documentation
+# ::tyranno:: rev: v$<< "dependency-groups" .dev .pypa_ver_spec_map(@) ."pre-commit" .pypa_ver_spec_min(@) >>
 minimum_pre_commit_version: 4.2.0
 repos:
   # Standard hooks
@@ -19,7 +20,7 @@ repos:
         args:
           - --assume-in-merge # otherwise skipped in rebase
       - id: check-symlinks # ban *broken* symlinks
-      # - id: check-shebang-scripts-are-executable # ensures all shebangs are executable
+      - id: check-shebang-scripts-are-executable # ensures all shebangs are executable
       - id: end-of-file-fixer # auto-add final \n
       - id: fix-byte-order-marker # auto-remove BOMs
       - id: trailing-whitespace # auto-remove end-of-line whitespace
@@ -28,51 +29,81 @@ repos:
     hooks:
       - id: check-filenames
         name: Enforce file and directory naming conventions.
-        entry: Paths may only use 'A-Za-z0-9_.,+=-' and cannot start with '-' or end with '.'.
+        entry: >-
+          Path components may only use 'A-Za-z0-9_.,+=-' and cannot start with '-' or end with '.'.
         language: fail
-        files: '[^/\w.,+=-]|^-|\.$'
+        files: '[^/\w.,+=-]|(^|/)-|\.($|/)'
+        stages:
+          - pre-commit
+      - id: pathvalidate
+        name: Verify that paths are valid cross-platform.
+        entry: pathvalidate --max-len 255 validate --
+        language: python
+        additional_dependencies:
+          - pathvalidate-cli
+        stages:
+          - pre-commit
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.33.0
+    rev: 0.33.2
     hooks:
+      - id: check-github-actions
       - id: check-github-workflows
       - id: check-compose-spec
+      - id: check-metaschema
+        files: \.schemas/.*\.(yaml|yml|json)$
 
   # UV lock and sync
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.7.10
+    rev: 0.8.3
     hooks:
       - id: uv-sync # first locks (without `--upgrade`)
 
   # Format and lint Python with Ruff
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.12
+    # ::tyranno:: rev: v$<< "dependency-groups" .dev .pypa_ver_spec_map(@) .ruff .pypa_ver_spec_max(@) >>
+    rev: v0.12.7
     hooks:
       - id: ruff-check
         args:
           - --fix-only
+          - --show-fixes
       - id: ruff-format
 
+  # Format Justfile
+  - repo: local
+    hooks:
+      - id: format-justfile
+        name: Format the justfile using 'just --fmt'.
+        entry: just --fmt --unstable
+        pass_filenames: false
+        language: system
+        files: justfile
+        stages:
+          - pre-commit
+
   # Format various formats with Prettier
+  # IMPORTANT:
+  # Prettier or an enabled plugin must recognize the extension of every received file.
+  # Keep `additional_dependencies`, `args`, and the `files` regex synced.
+  # List only types that are used or are likely to be used.
+  # See official and community plugins: https://prettier.io/docs/plugins
+  # Note that some of the listed community plugins are extremely buggy.
+  # In particular, I recommend against prettier-plugin-sh, which often introduces syntax errors.
+  # All plugins in https://github.com/un-ts/prettier, including for toml, are also problematic.
   - repo: https://github.com/JoC0de/pre-commit-prettier
-    rev: v3.5.3
+    rev: v3.6.2
     hooks:
       - id: prettier
         additional_dependencies:
-          - prettier@3.5.3
-          - prettier-plugin-ini@1.3.0
-          - prettier-plugin-toml@2.0.1
-          - prettier-plugin-sh@0.14.0
+          # ::tyranno:: - prettier@$<<_ .up(@, 3) .rev .trim_left(@, 'v') >>
+          - prettier@3.6.2
         args:
           - --experimental-ternaries # will be the default soon
-          - --experimental-operator-position=start # won't be the default but should be
-          - --plugin=prettier-plugin-ini
-          - --plugin=prettier-plugin-toml
-          - --plugin=prettier-plugin-sh # also covers .properties and Dockerfile
-        # IMPORTANT: Sync this list with file types in this repo.
-        # It's ok to list unused suffixes, but Prettier or a plugin must understand them.
+          - --experimental-operator-position=start # might be made the default soon
         # See: https://prettier.io/docs/en/plugins.html
-        files: \.(md|mdx|json|yaml|yml|toml|ini|cfg|properties|sh|ts|js|html|less|css)$|^Dockerfile$|^\..+ignore$
+        files: >-
+          (?x) \. (md|mdx|json|graphql|yaml|yml|js|ts|jsx|html|less|css|toml) $
 
   - repo: https://github.com/tcort/markdown-link-check
     rev: v3.13.7
